# bytestack

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: test.yaml
core/: Cargo.toml  bytestack_core.rs  bytestack_reader.rs  bytestack_writer.rs  err.rs  mod.rs
core/src/: config.rs  lib.rs
core/src/sdk/: bs_id_generator.rs  bs_opendal.rs  bs_opendal_config.rs  bs_opendal_reader.rs  bs_opendal_writer.rs  bs_reader.rs  err.rs  mod.rs
core/src/types/: data.rs  index.rs  meta.rs  mod.rs  stack.rs
core/src/utils/: crc.rs  id.rs  index_id.rs  log.rs  mod.rs  path.rs  time.rs
docs/: README_CN.md  design.md
examples/write-and-read/: Cargo.toml
examples/write-and-read/src/: main.rs
proto/: Cargo.toml
proto/src/: gen-turbo-proto.rs  lib.rs  main.rs
proto/src/bserver/: bserver.proto
proto/src/controller/: bytestack_controller.rs  controller.proto  controller.rs  mod.rs
proto/src/turbo/: mod.rs  turbo.proto  turbo.rs
services/bserver/: Cargo.toml
services/controller/: Cargo.toml
services/controller/src/: server.rs
services/controller/src/types/: mod.rs  pre_load.rs
services/proto/: Cargo.toml
services/proto/controller/: controller.proto
services/proto/src/: main.rs
services/proto/src/controller/: bytestack_controller.rs  controller.proto  mod.rs
services/turbo/: Cargo.toml
services/turbo/src/: server.rs
src/: lib.rs  main.rs
src/core/: bytestack.rs  bytestack_core.rs  bytestack_reader.rs  bytestack_writer.rs  err.rs  filelike.rs  mod.rs  reader.rs  writer.rs
src/test/: mod.rs  test_read_write.rs
src/types/: data.rs  err.rs  index.rs  meta.rs  mod.rs
