[profile.bench]
debug = true

[workspace]
default-members = ["core"]
exclude = ["examples"]
members = [
  "core",
  "bin/bst",
  "services/controller",
  "examples/write-and-read"
]
resolver = "1"

[workspace.package]
authors = ["dashjwz@gmail.com"]
edition = "2021"
repository = "https://github.com/dashjay/bytestack"
rust-version = "1.65"
version = "0.1.0"

[workspace.dependencies]
bytestack = { version = "0.1.0", path = "core" }
proto = {version = "0.1.0", path ="proto"}
serde = { version = "1.0", features = ["derive"] }
futures = {version = "0.3.28"}
log = "0.4.19"
