[package]
categories = ["filesystem"]
description = "Bytestack: store billions small files easily."
name = "bytestack"
keywords = ["haystack", "fs", "s3"]
version.workspace = true
edition.workspace = true

[dependencies]
bytes = "1.4.0"
rand = "0.8"
crc = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
futures = "0.3"
opendal = "0.37"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.4.0"
regex = "1.8.4"
chrono = "0.4.26"
serde_json = "1.0.99"
rusoto_credential = "0.44.0"
clap = { version = "4.3.10", features = ["derive"] }
tabled = "0.12.2"
proto = { path = "../services/proto" }
tonic = "0.9.2"

[package.metadata.docs.rs]
all-features = true


[features]
docs = []
