[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen-turbo-proto"
path = "src/gen-turbo-proto.rs"

[[bin]]
name = "gen-controller-proto"
path = "src/gen-controller-proto.rs"

[dependencies]
prost = "0.11.9"
tonic = "0.9.2"
tonic-build = "0.9.2"
serde = { workspace = true}
