[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
proto = { path = "../proto", version="0.1.0" }
prost = "0.11.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.3.10", features = ["derive"] }
mongodb = "2.6.0"
