[package]
name = "controller"
version = {workspace = true}
edition = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
mongodb = "2.6.0"
proto = { workspace = true }
bytestack = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
futures = { workspace = true}
